--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -43,7 +43,7 @@ isolate-workers = true
 
 # Limit the number of clients. Unset or set to zero for unlimited.
 #max-clients = 1024
-max-clients = 16
+max-clients = 0
 
 # Limit the number of client connections to one every X milliseconds
 # (X is the provided value). Set to zero for no limit.
@@ -51,7 +51,7 @@ max-clients = 16
 
 # Limit the number of identical clients (i.e., users connecting
 # multiple times). Unset or set to zero for unlimited.
-max-same-clients = 0
+max-same-clients = 2
 
 # Use listen-host to limit to specific IPs or to the IPs of a provided
 # hostname.
@@ -63,8 +63,8 @@ max-same-clients = 0
 #listen-host-is-dyndns = true
 
 # TCP and UDP port number
-tcp-port = 4321
-udp-port = 4321
+tcp-port = 443
+udp-port = 443
 
 # Accept connections using a socket file. It accepts HTTP
 # connections (i.e., without SSL/TLS unlike its TCP counterpart),
@@ -323,7 +323,7 @@ ping-leases = false
 
 # Use this option to enforce an MTU value to the incoming
 # connections. Unset to use the default MTU of the TUN device.
-#mtu = 1420
+mtu = 1480
 
 # Unset to enable bandwidth restrictions (in bytes/sec). The
 # setting here is global, but can also be set per user or per group.
