--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -43,7 +43,7 @@ isolate-workers = true
 
 # Limit the number of clients. Unset or set to zero for unlimited.
 #max-clients = 1024
-max-clients = 0
+max-clients = 1024
 
 # Limit the number of client connections to one every X milliseconds
 # (X is the provided value). Set to zero for no limit.
@@ -51,7 +51,7 @@ max-clients = 0
 
 # Limit the number of identical clients (i.e., users connecting
 # multiple times). Unset or set to zero for unlimited.
-max-same-clients = 2
+max-same-clients = 3
 
 # Use listen-host to limit to specific IPs or to the IPs of a provided
 # hostname.
@@ -323,7 +323,7 @@ ping-leases = false
 
 # Use this option to enforce an MTU value to the incoming
 # connections. Unset to use the default MTU of the TUN device.
-mtu = 1480
+#mtu = 1480
 
 # Unset to enable bandwidth restrictions (in bytes/sec). The
 # setting here is global, but can also be set per user or per group.
