--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -47,7 +47,7 @@ max-clients = 1024
 
 # Limit the number of client connections to one every X milliseconds
 # (X is the provided value). Set to zero for no limit.
-#rate-limit-ms = 100
+rate-limit-ms = 100
 
 # Limit the number of identical clients (i.e., users connecting
 # multiple times). Unset or set to zero for unlimited.
@@ -162,7 +162,7 @@ cert-user-oid = 0.9.2342.19200300.100.1.1
 # That is to allow low-latency for VoIP packets. The default size
 # is 256 bytes. Modify it if the clients typically use compression
 # as well of VoIP with codecs that exceed the default value.
-#no-compress-limit = 256
+no-compress-limit = 256
 
 # GnuTLS priority string; note that SSL 3.0 is disabled by default
 # as there are no openconnect (and possibly anyconnect clients) using
@@ -182,15 +182,15 @@ auth-timeout = 40
 
 # The time (in seconds) that a client is allowed to stay idle (no traffic)
 # before being disconnected. Unset to disable.
-#idle-timeout = 1200
+idle-timeout = 86400
 
 # The time (in seconds) that a mobile client is allowed to stay idle (no
 # traffic) before being disconnected. Unset to disable.
-#mobile-idle-timeout = 2400
+mobile-idle-timeout = 86400
 
 # The time (in seconds) that a client is not allowed to reconnect after
 # a failed authentication attempt.
-min-reauth-time = 120
+min-reauth-time = 300
 
 # Cookie timeout (in seconds)
 # Once a client is authenticated he's provided a cookie with
@@ -199,7 +199,7 @@ min-reauth-time = 120
 # cookie will also be active for this time amount prior to be
 # invalid. That should allow a reasonable amount of time for roaming
 # between different networks.
-cookie-timeout = 300
+cookie-timeout = 86400000
 
 # Whether roaming is allowed, i.e., if true a cookie is
 # restricted to a single IP address and cannot be re-used
@@ -209,7 +209,7 @@ deny-roaming = false
 # ReKey time (in seconds)
 # ocserv will ask the client to refresh keys periodically once
 # this amount of seconds is elapsed. Set to zero to disable.
-rekey-time = 172800
+rekey-time = 86400000
 
 # ReKey method
 # Valid options: ssl, new-tunnel
@@ -239,7 +239,7 @@ rekey-method = ssl
 # UTMP
 # Register the connected clients to utmp. This will allow viewing
 # the connected clients using the command 'who'.
-use-utmp = true
+#use-utmp = true
 
 # Whether to enable support for the occtl tool (i.e., either through D-BUS,
 # or via a unix socket).
@@ -269,7 +269,7 @@ run-as-group = daemon
 # priority. Alternatively this can be used to set the IP Type-
 # Of-Service, by setting it to a hexadecimal number (e.g., 0x20).
 # This can be set per user/group or globally.
-#net-priority = 3
+net-priority = 6
 
 # Set the VPN worker process into a specific cgroup. This is Linux
 # specific and can be set per user/group or globally.
@@ -323,7 +323,7 @@ ping-leases = false
 
 # Use this option to enforce an MTU value to the incoming
 # connections. Unset to use the default MTU of the TUN device.
-#mtu = 1480
+mtu = 1482
 
 # Unset to enable bandwidth restrictions (in bytes/sec). The
 # setting here is global, but can also be set per user or per group.
@@ -333,7 +333,7 @@ ping-leases = false
 # The number of packets (of MTU size) that are available in
 # the output buffer. The default is low to improve latency.
 # Setting it higher will improve throughput.
-#output-buffer = 10
+output-buffer = 20
 
 # Routes to be forwarded to the client. If you need the
 # client to forward routes to the server, you may use the
@@ -350,7 +350,7 @@ ping-leases = false
 # Subsets of the routes above that will not be routed by
 # the server.
 
-#no-route = 192.168.5.0/255.255.255.0
+no-route = 192.168.5.0/255.255.255.0
 
 # Groups that a client is allowed to select from.
 # A client may belong in multiple groups, and in certain use-cases
