--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -43,11 +43,11 @@ isolate-workers = true
 
 # Limit the number of clients. Unset or set to zero for unlimited.
 #max-clients = 1024
-max-clients = 1024
+max-clients = 0
 
 # Limit the number of client connections to one every X milliseconds
 # (X is the provided value). Set to zero for no limit.
-rate-limit-ms = 100
+#rate-limit-ms = 100
 
 # Limit the number of identical clients (i.e., users connecting
 # multiple times). Unset or set to zero for unlimited.
@@ -96,7 +96,7 @@ dpd = 90
 mobile-dpd = 1800
 
 # MTU discovery (DPD must be enabled)
-try-mtu-discovery = true
+try-mtu-discovery = false
 
 # The key and the certificates of the server
 # The key may be a file, or any URL supported by GnuTLS (e.g.,
@@ -162,13 +162,13 @@ cert-user-oid = 0.9.2342.19200300.100.1.1
 # That is to allow low-latency for VoIP packets. The default size
 # is 256 bytes. Modify it if the clients typically use compression
 # as well of VoIP with codecs that exceed the default value.
-no-compress-limit = 256
+#no-compress-limit = 256
 
 # GnuTLS priority string; note that SSL 3.0 is disabled by default
 # as there are no openconnect (and possibly anyconnect clients) using
 # that protocol. The string below does not enforce perfect forward
 # secrecy, in order to be compatible with legacy clients.
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 
 # More combinations in priority strings are available, check
 # http://gnutls.org/manual/html_node/Priority-Strings.html
@@ -182,11 +182,11 @@ auth-timeout = 40
 
 # The time (in seconds) that a client is allowed to stay idle (no traffic)
 # before being disconnected. Unset to disable.
-idle-timeout = 86400
+#idle-timeout = 86400
 
 # The time (in seconds) that a mobile client is allowed to stay idle (no
 # traffic) before being disconnected. Unset to disable.
-mobile-idle-timeout = 86400
+#mobile-idle-timeout = 86400
 
 # The time (in seconds) that a client is not allowed to reconnect after
 # a failed authentication attempt.
@@ -209,7 +209,7 @@ deny-roaming = false
 # ReKey time (in seconds)
 # ocserv will ask the client to refresh keys periodically once
 # this amount of seconds is elapsed. Set to zero to disable.
-rekey-time = 86400000
+rekey-time = 172800
 
 # ReKey method
 # Valid options: ssl, new-tunnel
@@ -239,7 +239,7 @@ rekey-method = ssl
 # UTMP
 # Register the connected clients to utmp. This will allow viewing
 # the connected clients using the command 'who'.
-#use-utmp = true
+use-utmp = true
 
 # Whether to enable support for the occtl tool (i.e., either through D-BUS,
 # or via a unix socket).
@@ -323,7 +323,7 @@ ping-leases = false
 
 # Use this option to enforce an MTU value to the incoming
 # connections. Unset to use the default MTU of the TUN device.
-mtu = 1482
+#mtu = 1482
 
 # Unset to enable bandwidth restrictions (in bytes/sec). The
 # setting here is global, but can also be set per user or per group.
@@ -333,7 +333,7 @@ mtu = 1482
 # The number of packets (of MTU size) that are available in
 # the output buffer. The default is low to improve latency.
 # Setting it higher will improve throughput.
-output-buffer = 20
+#output-buffer = 20
 
 # Routes to be forwarded to the client. If you need the
 # client to forward routes to the server, you may use the
@@ -346,7 +346,7 @@ output-buffer = 20
 #route = 10.10.10.0/255.255.255.0
 #route = 192.168.0.0/255.255.0.0
 #route = fef4:db8:1000:1001::/64
-
+route = default
 # Subsets of the routes above that will not be routed by
 # the server.
 
