--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -350,7 +350,12 @@ route = default
 # Subsets of the routes above that will not be routed by
 # the server.
 
-no-route = 192.168.5.0/255.255.255.0
+#no-route = 192.168.5.0/255.255.255.0
+no-route = 192.168.0.1/255.255.192.0
+no-route = 95.85.0.0/255.255.0.0
+no-route = 217.174.230.0/255.255.192.0
+
+
 
 # Groups that a client is allowed to select from.
 # A client may belong in multiple groups, and in certain use-cases
