--- a/certificate/ocserv.conf
+++ b/certificate/ocserv.conf
@@ -323,7 +323,7 @@ ping-leases = false
 
 # Use this option to enforce an MTU value to the incoming
 # connections. Unset to use the default MTU of the TUN device.
-#mtu = 1482
+mtu = 1482
 
 # Unset to enable bandwidth restrictions (in bytes/sec). The
 # setting here is global, but can also be set per user or per group.
@@ -351,7 +351,7 @@ route = default
 # the server.
 
 #no-route = 192.168.5.0/255.255.255.0
-no-route = 192.168.0.1/255.255.192.0
+#no-route = 192.168.0.1/255.255.192.0
 no-route = 95.85.0.0/255.255.0.0
 no-route = 217.174.230.0/255.255.192.0
 
