--- a/password/ocserv.conf
+++ b/password/ocserv.conf
@@ -62,8 +62,8 @@ max-same-clients = 0
 #listen-host-is-dyndns = true
 
 # TCP and UDP port number
-tcp-port = 4321
-udp-port = 4321
+tcp-port = 443
+udp-port = 443
 
 # Accept connections using a socket file. It accepts HTTP
 # connections (i.e., without SSL/TLS unlike its TCP counterpart),
@@ -167,7 +167,7 @@ server-key = /etc/ocserv/server-key.pem
 # as there are no openconnect (and possibly anyconnect clients) using
 # that protocol. The string below does not enforce perfect forward
 # secrecy, in order to be compatible with legacy clients.
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 
 # More combinations in priority strings are available, check
 # http://gnutls.org/manual/html_node/Priority-Strings.html
